// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (rule options list) basic generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
## Options
<!-- begin auto-generated rule options list -->

| Name   | Description                   | Type     | Choices           | Default  | Required | Deprecated |
| :----- | :---------------------------- | :------- | :---------------- | :------- | :------- | :--------- |
| \`arr1\` |                               | Array    |                   |          |          |            |
| \`arr2\` |                               | String[] |                   |          |          |            |
| \`bar\`  | Choose how to use the rule.   | String   | \`always\`, \`never\` | \`always\` | Yes      |            |
| \`baz\`  |                               |          |                   | \`true\`   | Yes      |            |
| \`biz\`  |                               |          |                   |          |          |            |
| \`foo\`  | Enable some kind of behavior. | Boolean  |                   | \`false\`  |          | Yes        |

<!-- end auto-generated rule options list -->"
`;

exports[`generate (rule options list) displays default column even when only falsy value, hiding deprecated/required cols with only falsy value generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
## Options
<!-- begin auto-generated rule options list -->

| Name  | Default |
| :---- | :------ |
| \`foo\` | \`false\` |

<!-- end auto-generated rule options list -->"
`;

exports[`generate (rule options list) with no marker comments generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
## Options
foo"
`;

exports[`generate (rule options list) with no options generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->

<!-- begin auto-generated rule options list -->



<!-- end auto-generated rule options list -->"
`;

exports[`generate (rule options list) with string that needs to be escaped in table generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
## Options
<!-- begin auto-generated rule options list -->

| Name  | Description                     | Type           |
| :---- | :------------------------------ | :------------- |
| \`foo\` | test<br/>                  desc | String\\|number |

<!-- end auto-generated rule options list -->"
`;
